--- a/charts/locust-k8s-operator/templates/serviceaccount-and-roles.yaml
+++ b/charts/locust-k8s-operator/templates/serviceaccount-and-roles.yaml
@@ -1,19 +1,33 @@
-# Check if serviceAccount creation is enabled.
-# + If false, the entire block will be skipped.
+{{/*
+=============================================================================
+RBAC CONFIGURATION FOR LOCUST K8S OPERATOR
+=============================================================================
+This template creates the ServiceAccount and RBAC rules needed by the operator.
+
+The operator needs permissions to:
+  1. Manage LocustTest CRs (create, update, delete, watch)
+  2. Update status subresource (report test status back to CR)
+  3. Manage finalizers (cleanup resources when CR is deleted)
+  4. Create/manage Jobs (master and worker pods)
+  5. Create/manage Services (master service for worker communication)
+  6. Create/manage ConfigMaps (test files, library files)
+  7. Read Secrets (for env injection, Kafka credentials)
+  8. Create Events (for status reporting)
+  9. Manage Leases (for leader election in HA mode)
+
+ClusterRole vs Role:
+  - ClusterRole (k8s.clusterRole.enabled=true): Operator can manage tests in ALL namespaces
+  - Role (k8s.clusterRole.enabled=false): Operator limited to its own namespace
+=============================================================================
+*/}}
+
 {{- if .Values.serviceAccount.create -}}
-
-# Initialize variables for reuse.
-# + $serviceAccountName; stores the name of the service account.
-# + $namespace; stores the namespace where resources will be deployed.
-# + $k8sServicesVerbs and $k8sJobsVerbs; define the permissions for Kubernetes services and jobs, respectively.
-
 {{- $serviceAccountName := include "locust-k8s-operator.serviceAccountName" . }}
-{{- $namespace := .Release.Namespace | quote }}
-{{- $k8sServicesVerbs := list "get" "list" "create" "update" "delete" }}
-{{- $k8sJobsVerbs := list "get" "list" "create" "update" "delete" "patch" }}
+{{- $namespace := .Release.Namespace }}
 
-# Define the ServiceAccount resource.
-# This account is used to execute the tasks within the Kubernetes cluster.
+# =============================================================================
+# ServiceAccount - Identity for the operator pod
+# =============================================================================
 apiVersion: v1
 kind: ServiceAccount
 metadata:
@@ -21,8 +35,10 @@ metadata:
   namespace: {{ $namespace }}
   labels:
     {{- include "locust-k8s-operator.labels" . | nindent 4 }}
-
-# Add image pull secrets if specified in values.
+  {{- with .Values.serviceAccount.annotations }}
+  annotations:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 {{- if .Values.image.pullSecrets }}
 imagePullSecrets:
 {{- range .Values.image.pullSecrets }}
@@ -31,12 +47,10 @@ imagePullSecrets:
 {{- end }}
 ---
 
-# Define RBAC (Role-Based Access Control) resources.
-# This section creates either a ClusterRole or a Role based on the value of k8s.clusterRole.enabled.
-
-# Conditionally create either a ClusterRole (for cluster-wide permissions)
-# + or a Role (for namespace-specific permissions).
-# + The default is to create a namespace-specific Role.
+# =============================================================================
+# ClusterRole/Role - Permissions for the operator
+# =============================================================================
+# Use ClusterRole for multi-namespace operation, Role for single namespace
 {{- if .Values.k8s.clusterRole.enabled }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
@@ -46,28 +60,62 @@ kind: Role
 {{- end }}
 metadata:
   name: {{ $serviceAccountName }}
-
-  # Specify the namespace only if creating a Role (namespace-specific permissions).
+  labels:
+    {{- include "locust-k8s-operator.labels" . | nindent 4 }}
   {{- if not .Values.k8s.clusterRole.enabled }}
   namespace: {{ $namespace }}
   {{- end }}
-
 rules:
-  - apiGroups: [ "locust.io" ]
-    resources: [ "locusttests" ]
-    verbs: [ "*" ]  # Full access to locusttests resources.
-  - apiGroups: [ "*" ]
-    resources: [ "services" ]
-    verbs: {{ toYaml $k8sServicesVerbs | nindent 6 }}  # Permissions for managing services.
-  - apiGroups: [ "*" ]
-    resources: [ "jobs" ]
-    verbs: {{ toYaml $k8sJobsVerbs | nindent 6 }}  # Permissions for managing jobs.
+  # -----------------------------------------------------------------------
+  # LocustTest Custom Resource permissions
+  # -----------------------------------------------------------------------
+  # Main CR - operator watches these and reconciles state
+  - apiGroups: ["locust.io"]
+    resources: ["locusttests"]
+    verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
+  # Status subresource - operator reports test status here
+  - apiGroups: ["locust.io"]
+    resources: ["locusttests/status"]
+    verbs: ["get", "update", "patch"]
+  # Finalizers - ensure cleanup happens before CR deletion
+  - apiGroups: ["locust.io"]
+    resources: ["locusttests/finalizers"]
+    verbs: ["update"]
 
+  # -----------------------------------------------------------------------
+  # Core Kubernetes resources
+  # -----------------------------------------------------------------------
+  # ConfigMaps - store test files and library code
+  # Secrets - read credentials for env injection
+  # Services - expose master pod to workers
+  - apiGroups: [""]
+    resources: ["configmaps", "secrets", "services"]
+    verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
+  # Events - report status changes and errors
+  - apiGroups: [""]
+    resources: ["events"]
+    verbs: ["create", "patch"]
+
+  # -----------------------------------------------------------------------
+  # Batch resources
+  # -----------------------------------------------------------------------
+  # Jobs - master and worker pods run as Jobs
+  - apiGroups: ["batch"]
+    resources: ["jobs"]
+    verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
+
+  # -----------------------------------------------------------------------
+  # Coordination resources
+  # -----------------------------------------------------------------------
+  # Leases - used for leader election in HA deployments
+  - apiGroups: ["coordination.k8s.io"]
+    resources: ["leases"]
+    verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
 ---
 
-# Create a corresponding ClusterRoleBinding or RoleBinding
-# + to bind the ServiceAccount to the appropriate ClusterRole or Role.
-
+# =============================================================================
+# ClusterRoleBinding/RoleBinding - Bind permissions to ServiceAccount
+# =============================================================================
 {{- if .Values.k8s.clusterRole.enabled }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
@@ -77,6 +125,8 @@ kind: RoleBinding
 {{- end }}
 metadata:
   name: {{ $serviceAccountName }}
+  labels:
+    {{- include "locust-k8s-operator.labels" . | nindent 4 }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: {{ if .Values.k8s.clusterRole.enabled }}ClusterRole{{ else }}Role{{ end }}
