--- a/charts/locust-k8s-operator/values.yaml
+++ b/charts/locust-k8s-operator/values.yaml
@@ -1,143 +1,180 @@
-# Default values for locust-k8s-operator.
+# =============================================================================
+# Locust K8s Operator - Go v2.0.0
+# =============================================================================
 
-# General
-appPort: 8080
-
-# Deployment
-replicaCount: 1
-
+# -- Operator image configuration
 image:
   repository: lotest/locust-k8s-operator
+  tag: ""  # Defaults to appVersion
   pullPolicy: IfNotPresent
-  # List of names of secrets within the namespace to use imagePullSecrets. Applies to deployments and serviceAccounts
   pullSecrets: []
-  # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
 
-# Liveness/Readiness probes
-livenessProbe:
-  httpGet:
-    scheme: HTTP
-    path: /health
-    port: micronaut-port
-  initialDelaySeconds: 10
-  periodSeconds: 20
-  timeoutSeconds: 10
-  failureThreshold: 1
-readinessProbe:
-  httpGet:
-    scheme: HTTP
-    path: /health
-    port: micronaut-port
-  initialDelaySeconds: 30
-  periodSeconds: 20
-  timeoutSeconds: 10
-  failureThreshold: 1
+# -- Operator pod resources (Go binary is lightweight)
+resources:
+  limits:
+    cpu: 500m
+    memory: 128Mi
+  requests:
+    cpu: 10m
+    memory: 64Mi
 
-# K8s config
-k8s:
-  customResourceDefinition:
-    deploy: true
+# -- Replica count (use with leader election for HA)
+replicaCount: 2
 
-  clusterRole:
-    enabled: true
+# -- Leader election for HA deployments
+leaderElection:
+  enabled: true
+
+# -- Metrics endpoint (Prometheus)
+metrics:
+  enabled: false  # Disabled by default, enable if scraping
+  port: 8080
+  secure: false
+
+# -- Webhook configuration (for validation/conversion)
+webhook:
+  enabled: false  # Requires cert-manager
+  port: 9443
+  certManager:
+    enabled: true  # Use cert-manager for TLS
+
+# -- CRD installation
+crd:
+  install: true
+
+# =============================================================================
+# Locust Test Pod Configuration (what the operator creates)
+# =============================================================================
+
+locustPods:
+  # -- Default resources for Locust containers
+  resources:
+    requests:
+      cpu: 250m
+      memory: 128Mi
+      ephemeralStorage: 30M
+    limits:
+      cpu: 1000m
+      memory: 1024Mi
+      ephemeralStorage: 50M
+
+  # -- Inject affinity/tolerations from CR spec
+  affinityInjection: true
+  tolerationsInjection: true
+
+  # -- Job TTL after completion (empty = Kubernetes default)
+  ttlSecondsAfterFinished: ""
+
+  # -- Metrics exporter sidecar (for v1 API / non-OTel mode)
+  metricsExporter:
+    image: containersol/locust_exporter:v0.5.0
+    port: 9646
+    pullPolicy: IfNotPresent
+    resources:
+      requests:
+        cpu: 100m
+        memory: 64Mi
+        ephemeralStorage: 30M
+      limits:
+        cpu: 250m
+        memory: 128Mi
+        ephemeralStorage: 50M
+
+# =============================================================================
+# Optional: OTel Collector (for v2 API OTel mode)
+# =============================================================================
+
+otelCollector:
+  enabled: false
+  image: otel/opentelemetry-collector-contrib:0.92.0
+  replicas: 1
+  resources:
+    requests:
+      cpu: 50m
+      memory: 64Mi
+    limits:
+      cpu: 200m
+      memory: 256Mi
+  # -- OTel Collector configuration (YAML)
+  config: |
+    receivers:
+      otlp:
+        protocols:
+          grpc:
+            endpoint: 0.0.0.0:4317
+          http:
+            endpoint: 0.0.0.0:4318
+    processors:
+      batch: {}
+    exporters:
+      debug:
+        verbosity: detailed
+    service:
+      pipelines:
+        metrics:
+          receivers: [otlp]
+          processors: [batch]
+          exporters: [debug]
+
+# =============================================================================
+# Standard Kubernetes options
+# =============================================================================
 
 serviceAccount:
-  # Specifies whether a service account should be created
   create: true
-  # Annotations to add to the service account
-  annotations: {}
-  # The name of the service account to use.
-  # If not set and create is true, a name is generated using the fullname template
   name: ""
+  annotations: {}
 
 podAnnotations: {}
-
-resources: {}
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
-# requests:
-#   cpu: 100m
-#   memory: 128Mi
-
 nodeSelector: {}
-
 tolerations: []
-
 affinity: {}
 
-config:
-  loadGenerationJobs:
-    # Either leave empty or use an empty string to avoid setting this option
-    ttlSecondsAfterFinished: ""
+# =============================================================================
+# Backward Compatibility (DEPRECATED - use new paths above)
+# =============================================================================
+# These values are mapped to new paths via _helpers.tpl for existing users.
+# They will be removed in a future release.
 
-  loadGenerationPods:
-    resource:
-      cpuRequest: 250m
-      memRequest: 128Mi
-      ephemeralRequest: 30M
-      cpuLimit: 1000m
-      memLimit: 1024Mi
-      ephemeralLimit: 50M
-    affinity:
-      enableCrInjection: true
-    taintTolerations:
-      enableCrInjection: true
-    metricsExporter:
-      # Default Metrics Exporter config used by the operator
-      image: "containersol/locust_exporter:v0.5.0"
-      port: 9646
-      pullPolicy: IfNotPresent
-      resource:
-        cpuRequest: 250m
-        memRequest: 128Mi
-        ephemeralRequest: 30M
-        cpuLimit: 250m
-        memLimit: 128Mi
-        ephemeralLimit: 50M
-    kafka:
-      bootstrapServers: localhost:9092
-      locustK8sKafkaUser:
-        userName: locust-k8s-kafka-user-msk-credentials
-        deployUser: true
-        cluster:
-          name: cluster-name
-          patternType: literal
+# config:
+#   loadGenerationJobs:
+#     ttlSecondsAfterFinished: ""
+#   loadGenerationPods:
+#     resource:
+#       cpuRequest: 250m
+#       memRequest: 128Mi
+#       cpuLimit: 1000m
+#       memLimit: 1024Mi
+#     affinity:
+#       enableCrInjection: true
+#     taintTolerations:
+#       enableCrInjection: true
+#     metricsExporter:
+#       image: "containersol/locust_exporter:v0.5.0"
+#       port: 9646
+#     kafka:
+#       bootstrapServers: localhost:9092
+#       acl:
+#         enabled: false
 
-      acl:
-        enabled: false
-        protocol: SASL_PLAINTEXT
-        secret:
-          userKey: username
-          passwordKey: password
+# -- Kafka configuration (DEPRECATED - kept for backward compatibility)
+kafka:
+  enabled: false
+  bootstrapServers: localhost:9092
+  security:
+    enabled: false
+    protocol: SASL_PLAINTEXT
+    saslMechanism: SCRAM-SHA-512
+    jaasConfig: ""
+  credentials:
+    secretName: ""
+    usernameKey: username
+    passwordKey: password
 
-      sasl:
-        mechanism: SCRAM-SHA-512
-        jaas:
-          config: org.apache.kafka.common.security.scram.ScramLoginModule required username="${KAFKA_USERNAME}" password="${KAFKA_PASSWORD}";
+# =============================================================================
+# K8s RBAC Configuration
+# =============================================================================
 
-micronaut:
-  metrics:
+k8s:
+  clusterRole:
     enabled: true
-    web:
-      enabled: true
-    jvm:
-      enabled: true
-    uptime:
-      enabled: true
-    processor:
-      enabled: true
-    files:
-      enabled: false
-    logback:
-      enabled: false
-    executor:
-      enabled: false
-    export:
-      prometheus:
-        step: 'PT30S'
