fix: correct v2 testdata image field to string instead of object

--- a/locust-k8s-operator-go/test/e2e/testdata/v2/locusttest-basic.yaml
+++ b/locust-k8s-operator-go/test/e2e/testdata/v2/locusttest-basic.yaml
@@ -8,7 +8,6 @@ spec:
   worker:
     replicas: 2
     command: "-f /lotest/src/locustfile.py"
-  image:
-    name: locustio/locust:latest
+  image: locustio/locust:latest
   testFiles:
     configMapRef: e2e-test-configmap
