fix: use ko to build operator image with correct package path for helm CI
- Install ko build tool in helm CI job
- Extract appVersion from Chart.yaml dynamically
- Build operator image with ko using ./cmd package directory
- Load image into kind cluster to fix image pull failures
- Set image.pullPolicy=Never to use local image

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -121,7 +121,7 @@ jobs:
           KO_DOCKER_REPO: lotest/locust-k8s-operator
         run: |
           CHART_VERSION=$(grep '^appVersion:' ../charts/locust-k8s-operator/Chart.yaml | awk '{print $2}' | tr -d '"')
-          ko build github.com/AbdelrhmanHamouda/locust-k8s-operator/cmd/main.go --local --bare --tags=${CHART_VERSION}
+          ko build ./cmd --local --bare --tags=${CHART_VERSION}
 
       - name: 📦 Load image into kind cluster
         if: steps.list-changed.outputs.changed == 'true'
