--- a/locust-k8s-operator-go/config/default/manager_webhook_patch.yaml
+++ b/locust-k8s-operator-go/config/default/manager_webhook_patch.yaml
@@ -8,6 +8,10 @@ spec:
     spec:
       containers:
       - name: manager
+        args:
+        - --leader-elect
+        - --health-probe-bind-address=:8081
+        - --webhook-cert-path=/tmp/k8s-webhook-server/serving-certs
         ports:
         - containerPort: 9443
           name: webhook-server
