--- a/locust-k8s-operator-go/config/default/manager_webhook_patch.yaml
+++ b/locust-k8s-operator-go/config/default/manager_webhook_patch.yaml
@@ -11,6 +11,7 @@ spec:
         args:
         - --leader-elect
         - --health-probe-bind-address=:8081
+        - --metrics-bind-address=:8443
         - --webhook-cert-path=/tmp/k8s-webhook-server/serving-certs
         ports:
         - containerPort: 9443
