docs: add v2.0 migration guide and update documentation for new API
- Add v2.0 announcement section to README with performance improvements table
- Document new v2 features: OpenTelemetry, secret injection, volume mounting
- Update advanced topics with v2 API examples alongside v1 (deprecated) examples
- Add separate resource specs documentation for master/worker pods
- Document OpenTelemetry integration with environment variables and configuration
- Add environment and secret injection examples (

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -185,6 +185,8 @@ nav:
   - Deploy Operator with HELM: helm_deploy.md
   - Advanced topics: advanced_topics.md
   - Metrics & Dashboards: metrics_and_dashboards.md
+  - API Reference: api_reference.md
+  - Migration Guide: migration.md
   - Roadmap: roadmap.md
   - Contributing & Development:
       - Overview: contribute.md
