feat(01-03): add Helm masterResources and workerResources fields
- Add masterResources and workerResources to values.yaml (default empty)
- Add 12 helper templates in _helpers.tpl for role-specific resources
- Add conditional env vars in deployment.yaml (via envVars helper)
- Empty resources means 'use unified resources' (backward compatible)
- Helm lint passes, default rendering excludes role-specific env vars

--- a/charts/locust-k8s-operator/values.yaml
+++ b/charts/locust-k8s-operator/values.yaml
@@ -58,6 +58,30 @@ locustPods:
       memory: 1024Mi
       ephemeralStorage: 50M
 
+  # -- Role-specific resources for master Locust containers (overrides unified resources above)
+  # Leave empty {} to use unified resources for master
+  masterResources: {}
+  #   requests:
+  #     cpu: 500m
+  #     memory: 256Mi
+  #     ephemeralStorage: 30M
+  #   limits:
+  #     cpu: 2000m
+  #     memory: 2048Mi
+  #     ephemeralStorage: 50M
+
+  # -- Role-specific resources for worker Locust containers (overrides unified resources above)
+  # Leave empty {} to use unified resources for workers
+  workerResources: {}
+  #   requests:
+  #     cpu: 250m
+  #     memory: 128Mi
+  #     ephemeralStorage: 30M
+  #   limits:
+  #     cpu: 1000m
+  #     memory: 1024Mi
+  #     ephemeralStorage: 50M
+
   # -- Inject affinity/tolerations from CR spec
   affinityInjection: true
   tolerationsInjection: true
