--- a/charts/locust-k8s-operator/templates/deployment.yaml
+++ b/charts/locust-k8s-operator/templates/deployment.yaml
@@ -125,8 +125,11 @@ spec:
           env:
             {{- include "locust-k8s-operator.envVars" . | nindent 12 }}
           {{- if .Values.webhook.enabled }}
-          # Webhook TLS certificates mounted from Secret
+          # /tmp emptyDir allows controller-runtime webhook server to create temp files
+          # with readOnlyRootFilesystem: true. Webhook certs overlay at subdirectory.
           volumeMounts:
+            - name: tmp
+              mountPath: /tmp
             - name: webhook-certs
               mountPath: /tmp/k8s-webhook-server/serving-certs
               readOnly: true
@@ -134,6 +137,8 @@ spec:
       {{- if .Values.webhook.enabled }}
       # Webhook certificate Secret (created by cert-manager or manually)
       volumes:
+        - name: tmp
+          emptyDir: {}
         - name: webhook-certs
           secret:
             secretName: {{ include "locust-k8s-operator.fullname" . }}-webhook-certs
