--- a/charts/locust-k8s-operator/values.yaml
+++ b/charts/locust-k8s-operator/values.yaml
@@ -18,8 +18,8 @@ resources:
     cpu: 10m
     memory: 64Mi
 
-# -- Replica count (use with leader election for HA)
-replicaCount: 2
+# -- Replica count (increase to 2+ with leader election for HA)
+replicaCount: 1
 
 # -- Leader election for HA deployments
 leaderElection:
